feat:logo added
- added logo
- added better introduction

--- a/nbs/custom.scss
+++ b/nbs/custom.scss
@@ -9,5 +9,8 @@ h6 {
 }
 
 .navbar-logo {
-  max-height: 90px;
+  max-height: 80px;
+}
+.navbar-title {
+  font-family: "Gilroy", -apple-system, sans-serif;
 }
