feat:hybrid layout

--- a/nbs/custom.scss
+++ b/nbs/custom.scss
@@ -8,6 +8,11 @@ h6 {
   font-family: Merriweather, Georgia, Cambria;
 }
 
+.description {
+  font-style: normal !important;
+  font-family: "Gilroy", -apple-system, sans-serif;
+  font-weight: 300 !important;
+}
 .navbar-logo {
   max-height: 80px;
 }
